Create buttons for choosing a vowel or consonant

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Countdown</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <button type="button" class="letter-btn consonant">Consonant</button>
+    <button type="button" class="letter-btn vowel">Vowel</button>
 </body>
 </html>
