Add basic UIfor viewing letters
Letters get added on screen so the user can see what letters were generated based on their choice

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div class="letters"></div>
     <button type="button" class="letter-btn consonant">Consonant</button>
     <button type="button" class="letter-btn vowel">Vowel</button>
 </body>
