Add simple styling for UI

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="letters"></div>
-    <button type="button" class="letter-btn consonant">Consonant</button>
-    <button type="button" class="letter-btn vowel">Vowel</button>
+    <div class="game-container">
+        <div class="letters"></div>
+        <div class="buttons-container">
+            <button type="button" class="letter-btn consonant">Consonant</button>
+            <button type="button" class="letter-btn vowel">Vowel</button>
+        </div>
+    </div>
 </body>
 </html>
